hermes_fuzz_executed_few_shot/fuzz_20_execution
'use strict';
<fim_middle>

 
function (c, d) {}


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>
^
